[project]
name = "aenir"
version = "0.1.0"
description = ""
authors = [
    {name = "gchang12",email = "gc8@hawaii.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "aenir", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
