[metadata]
name = aenir
description = Add a short description here!
author = gchang12
author_email = gc8@hawaii.edu
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/pyscaffold/pyscaffold/
project_urls = 
	Documentation = https://pyscaffold.org/
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir = 
	=src
install_requires = 
	importlib-metadata; python_version<"3.8"

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
testing = 
	setuptools
	pytest
	pytest-cov
	pandas
	requests
	bs4
	lxml
	sqlalchemy

[options.entry_points]

[tool:pytest]
addopts = 
	--cov aenir --cov-report term-missing
	--verbose
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pyscaffold]
version = 4.5
package = aenir
extensions = 
	no_skeleton

[egg_info]
tag_build = 
tag_date = 0

